--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
     environment:
       KAFKA_CLUSTERS_0_NAME: "Kafka"
       KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka:9092"
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: "http://schemaregistry:8085"
 
 
   init-kafka:
